-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.2.1, Qt Creator 4.3.0
-
None
Try to reformat (Tools->QML/JS->Reformat File) the following test file:
import QtQuick 2.5 // Test Item { }
The result is normal:
import QtQuick 2.5 // Test Item { }
But if you try to reformat again, the result will be:
import QtQuick 2.5 // Test Item { }
Per se the presence of two line breaks is not really serious.
But it is maybe a little bit more disturbing to have two different results after reformatting two times the same file.
Note: the same behavior is observed with all the types of comments (// /* /*!) after a block of imports.
| For Gerrit Dashboard: QTCREATORBUG-18332 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 207204,2 | QmlJs: avoid adding unnecessary lines in reformatting | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |