QmlJs: avoid adding unnecessary lines in reformatting

The reformatter used to add unnecessary empty lines, notably before
comments after import declarations.

Task-number: QTCREATORBUG-18332
Change-Id: I96d6f2dd53d1197aa6bc0b834971a66861b2f498
Reviewed-by: Erik Verbruggen <erik.verbruggen@qt.io>